--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -19,8 +19,41 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hai mpuss
+      selamat ulang tahun yaa
+      semoga di umurmu yang ke 5 ini
+      eh kamu umur 5 apa 18 si
+      aku lupa
+      wkwk
+      next
+      semoga
+      kamu diberikan kesehatan
+      keselamatan
+      kemudahan
+      kelancaran
+      kebersihan
+      kemakmuran
+      kekeluargaan
+      kelembutan
+      keindahan
+      kesempurnaan
+      kemanusiaan
+      kerakyatan
+      keadilan
+      sosial bagi seluruh rakyat Indonesia
+      kok jadi Pancasila sih
+      yaudah intinya gitu ya
+      selamat datang di umurmu ke 18 ini
+      selamat menempuh kehidupan yang baru
+      jangan nangis
+      simpan air matamu itu
+      maafin aku yaa
+      maaf juga gua se soswit orang lain
+      anjay gua ga tuh
+      mungkin itu aja si
+      intinya semua doa baik untukmu
+      I LOVE YOU`;
+      musik = `lagu.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
