--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -19,7 +19,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = `hai mpuss
+      ucapan = `hai kanaya
+      hai mpuss
       selamat ulang tahun yaa
       semoga di umurmu yang ke 5 ini
       eh kamu umur 5 apa 18 si
@@ -31,6 +32,9 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       keselamatan
       kemudahan
       kelancaran
+      kebahagiaan
+      keberhasilan
+      kemajuan
       kebersihan
       kemakmuran
       kekeluargaan
@@ -52,6 +56,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       anjay gua ga tuh
       mungkin itu aja si
       intinya semua doa baik untukmu
+      terima kasih sudah jadi manusia favorit di hidupku
       I LOVE YOU`;
       musik = `lagu.mp3`;
       nomorWhatsapp = ``;
