--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -52,11 +52,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       jangan nangis
       simpan air matamu itu
       maafin aku yaa
-      maaf juga gua se soswit orang lain
+      maaf juga gua ga se soswit orang lain
       anjay gua ga tuh
       mungkin itu aja si
       intinya semua doa baik untukmu
       terima kasih sudah jadi manusia favorit di hidupku
+      babaii
       I LOVE YOU`;
       musik = `lagu.mp3`;
       nomorWhatsapp = ``;
