--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -14,8 +14,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   </head>
   <body>
     <div class="open">
-      <i>🐱</i>
-      <span>Klik kucing nya</span>
+      <i>❤️</i>
+      <span>Klik love nya</span>
     </div>
 
     <script>
