--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -45,7 +45,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       kerakyatan
       keadilan
       sosial bagi seluruh rakyat Indonesia
-      kok jadi Pancasila sih
+      kok jadi pancasila sih
       yaudah intinya gitu ya
       selamat datang di umurmu ke 18 ini
       selamat menempuh kehidupan yang baru
