--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -45,7 +45,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       kerakyatan
       keadilan
       sosial bagi seluruh rakyat Indonesia
-      kok jadi pancasila sih
+      kok jadi pancasila si
       yaudah intinya gitu ya
       selamat datang di umurmu ke 18 ini
       selamat menempuh kehidupan yang baru
@@ -56,7 +56,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       anjay gua ga tuh
       mungkin itu aja si
       intinya semua doa baik untukmu
-      terima kasih sudah jadi manusia favorit di hidupku
+      terima kasih sudah jadi manusia favoritku
+      dadaa
       babaii
       I LOVE YOU`;
       musik = `lagu.mp3`;
