--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -21,6 +21,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     <script>
       ucapan = `hai kanaya
       hai mpuss
+      tau kan hari ini tanggal berapa
+      yapp
+      tanggal 1 april
+      tanggal yang kamu nanti-nantikan
+      tanggal dimana kamu dilahirkan di dunia ini
+      tanggal anugerah yang tuhan berikan untukmu
       selamat ulang tahun yaa
       semoga di umurmu yang ke 5 ini
       eh kamu umur 5 apa 18 si
@@ -50,8 +56,9 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       selamat datang di umurmu ke 18 ini
       selamat menempuh kehidupan yang baru
       jangan nangis
-      simpan air matamu itu
+      calon dokter gabole nangis
       maafin aku yaa
+      kalo aku punya salah ke kamu
       maaf juga gua ga se soswit orang lain
       anjay gua ga tuh
       mungkin itu aja si
