--- a/buatmpus/index.html
+++ b/buatmpus/index.html
@@ -15,7 +15,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>🙀</i>
-      <span>Klik kucing nya</span>
+      <span>KLIK KUCING NYA</span>
     </div>
 
     <script>
